modified footer, fixed issue with scroll-to-top button being covered by drawer

--- a/Blazor_practice/Pages/Index.razor.css
+++ b/Blazor_practice/Pages/Index.razor.css
@@ -1,7 +1,4 @@
-﻿body {
-}
-
-.name {
+﻿.name {
     font: Roquen;
     font-size: 70px;
     font-weight: 800;
